--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -8,12 +8,21 @@
     <title>Warmup</title>
 </head>
 <body>
-    <button>Submit</button>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum qui libero sit delectus placeat magni iste quisquam impedit veniam dolores, obcaecati adipisci nemo dolore minima aperiam ipsa? Placeat, perferendis aut!</p>
+        <button class="submit">Submit</button>
+    </div>
     <br />
     <br />
-    <button>Confirm</button>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit eos ducimus fugit, earum quae ad impedit, ipsa, vel deserunt consequatur id minus distinctio aliquid harum dolores nihil commodi. Eos, sunt.</p>
+        <button class="confirm">Confirm</button>
+    </div>
     <br />
     <br />
-    <button>Cancel</button>
+    <div>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat magni voluptas enim odit, doloremque vel, nemo ratione reiciendis ipsum blanditiis perferendis ab! Reiciendis expedita nihil quam, nam architecto a accusantium.</p>
+        <button class="cancel">Cancel</button>
+    </div>
 </body>
 </html>
