--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Warmup</title>
-</head>
-<body>
-    <button>Submit</button>
+  </head>
+    <div class="wrapper">
+        <div class="container-1">
+    <button class="button-1">Submit</button>
+    <p>Lorem ipsum dolor sit amet.</p>
+    </div>
     <br />
     <br />
-    <button>Confirm</button>
+    <div class="container-2">
+    <button class="button-2">Confirm</button>
+    <p>Lorem ipsum dolor sit amet.</p>
+    </div>
     <br />
     <br />
-    <button>Cancel</button>
-</body>
+    <div class="container-3">
+    <button class="button-3">Cancel</button>
+    <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    </div>
+  </body>
 </html>
