--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Warmup</title>
-</head>
-<body>
-    <button>Submit</button>
-    <br />
-    <br />
-    <button>Confirm</button>
-    <br />
-    <br />
-    <button>Cancel</button>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Warmup</title>
+	</head>
+	<body>
+		<div class="cards">
+			<div class="card">
+				<p class="card-text">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit dignissimos tempora
+					quidem veritatis quasi ullam nulla et consequatur quae!
+				</p>
+				<button class="submit-btn">Submit</button>
+			</div>
+			<!-- <br />
+		<br /> -->
+			<div class="card">
+				<p class="card-text">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit dignissimos tempora
+					quidem veritatis quasi ullam nulla et consequatur quae!
+				</p>
+				<button class="confirm-btn">Confirm</button>
+			</div>
+			<!-- <br />
+		<br /> -->
+			<div class="card">
+				<p class="card-text">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit dignissimos tempora
+					quidem veritatis quasi ullam nulla et consequatur quae!
+				</p>
+				<button class="cancel-btn">Cancel</button>
+			</div>
+		</div>
+	</body>
 </html>
