--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -8,12 +8,26 @@
     <title>Warmup</title>
 </head>
 <body>
-    <button>Submit</button>
-    <br />
-    <br />
-    <button>Confirm</button>
-    <br />
-    <br />
-    <button>Cancel</button>
+    <div class="controls">
+        <span class="btn-container">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut iure debitis rem vel ipsa soluta, a velit, maiores nesciunt porro ab, officiis assumenda aliquam deleniti consequatur qui sit sequi magnam.
+            </p>
+            <button class="submit">Submit</button>
+        </span>
+        <span class="btn-container">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod, soluta debitis nobis iste quasi, illum natus hic, quos cumque quaerat vitae quae distinctio animi explicabo! Esse alias omnis officiis incidunt?
+            </p>
+            <button class="confirm">Confirm</button>
+        </span>
+        <span class="btn-container">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nam assumenda nemo perferendis reprehenderit possimus et. Vel explicabo quidem deleniti reprehenderit aliquid natus exercitationem, eius ullam. Fugit dolor nulla commodi?
+            </p>
+            <button class="cancel">Cancel</button>
+        </span>
+    </div>
+    
 </body>
 </html>
