--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Warmup</title>
-</head>
-<body>
-    <button>Submit</button>
+  </head>
+  <body>
+    <div class="container--1">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae quae
+        rerum placeat repellat impedit dolor, similique officiis nihil minus
+        accusantium, expedita beatae voluptates nam earum in! Perspiciatis quod
+        incidunt voluptate.
+      </p>
+      <button class="btn--submit">Submit</button>
+    </div>
     <br />
     <br />
-    <button>Confirm</button>
+    <div class="container--2">
+      <p>
+        Później mówiono, że człowiek ten nadszedł od północy od bramy
+        Powroźniczej. Szedł pieszo, a objuczonego konia prowadził za uzdę. Było
+        późne popołudnie i kramy powroźników i rymarzy były już zamknięte, a
+        uliczka pusta. Było ciepło, a człowiek ten miał na sobie czarny płaszcz
+        narzucony na ramiona. Zwracał uwagę.
+      </p>
+      <button class="btn--confirm">Confirm</button>
+    </div>
     <br />
     <br />
-    <button>Cancel</button>
-</body>
+    <div class="container--3">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia iusto
+        officia nobis animi eum dolore officiis consectetur? Labore veniam
+        deserunt minus nostrum architecto consequuntur eum, hic cupiditate
+        laboriosam, repellat fugit.
+      </p>
+      <button class="btn--cancel">Cancel</button>
+    </div>
+  </body>
 </html>
