--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="style.css">
     <title>Warmup</title>
 </head>
-<body>
-    <button>Submit</button>
-    <br />
-    <br />
-    <button>Confirm</button>
-    <br />
-    <br />
-    <button>Cancel</button>
+<div>
+    <div id="submit">
+        <button type="button">Submit</button>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi sapiente voluptatem dicta hic, vel reprehenderit asperiores sit sed facere tempora aliquam expedita modi vitae ut voluptates voluptatibus aut. Ea, quasi!</p>
+    <div id="confirm">
+        <button type="button">Confirm</button>
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quod, hic obcaecati unde distinctio magnam deleniti autem, eligendi perferendis repellat ut iste aut, natus nisi dolorem omnis quidem voluptatum suscipit.</p>
+    <div id="cancel">
+        <button type="button">Cancel</button>
+    </div>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem eum quaerat, animi excepturi natus totam dolor tenetur quisquam labore suscipit esse alias distinctio obcaecati ut veniam? Modi ipsum sunt cum?</p>
 </body>
 </html>
