Added css and html

--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -8,12 +8,23 @@
     <title>Warmup</title>
 </head>
 <body>
-    <button>Submit</button>
+    <div class="orange-container">
+        <button class="orange">Submit</button>
+        <p>pomarańczowy kontener</p>
+    </div>
     <br />
     <br />
-    <button>Confirm</button>
+    <div class="lightgreen-container">
+        <button class="lightgreen">Confirm</button>
+        <p>zielony kontener</p>
+    </div>
     <br />
     <br />
-    <button>Cancel</button>
+    <div>
+        <button class="darkgreen">Cancel</button>
+        <p>ciemnozielony kontener</p>
+
+    </div>
+    
 </body>
 </html>
