--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -8,12 +8,27 @@
     <title>Warmup</title>
 </head>
 <body>
-    <button>Submit</button>
+    <div class="container" id="cont1">
+        <button class="button" id="button1">
+            Submit
+        </button>
+        <p>Przykladowy paragraf</p>
+    </div>
     <br />
     <br />
-    <button>Confirm</button>
+    <div class="container" id="cont2">
+        <button class="button" id="button2">
+            Confirm
+        </button>
+        <p>Przykladowy paragraf</p>
+    </div>
     <br />
     <br />
-    <button>Cancel</button>
+    <div class="container" id="cont3">
+        <button class="button" id="button3">
+        Cancel
+        </button>
+        <p>Przykladowy paragraf</p>
+    </div>
 </body>
 </html>
