--- a/Podstawy HTML i CSS/cards/index.html
+++ b/Podstawy HTML i CSS/cards/index.html
@@ -14,19 +14,24 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<body>
-  
+<div>
+  <div class="Cards"></div>
+  <div class="Sedans">
   Sedans
   Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
   or on your next road trip.
-
-  SUVs
+  </div>
+  <div class="Suvs">
+    SUVs
   Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
   and off-road adventures.
-
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+  </div>
+  <div class ="Luxury">
+    Luxury
+    Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+    rental and arrive in style.
+  </div>
+</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
