html layout added

--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Warmup</title>
-</head>
-<body>
-    <button>Submit</button>
+  </head>
+  <body>
+    <div>
+      <button class="submit button">Submit</button>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni numquam
+        quis totam adipisci suscipit vero pariatur eos! Praesentium quo minima
+        voluptatum illum suscipit voluptate, commodi quas odio, ut perspiciatis
+        beatae!
+      </p>
+    </div>
     <br />
     <br />
-    <button>Confirm</button>
+    <div>
+      <button class="confirm button">Confirm</button>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus rerum
+        maxime possimus quibusdam earum tenetur maiores repellat molestiae, sit
+        quasi placeat eligendi beatae impedit odit, vel ut ipsam aliquid
+        perspiciatis!
+      </p>
+    </div>
     <br />
     <br />
-    <button>Cancel</button>
-</body>
+    <div>
+      <button class="cancel button">Cancel</button>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero modi
+        eaque ea iure! Deleniti ad aut, autem laboriosam fugit ducimus nisi ex
+        mollitia error accusamus. Tempora et dolor esse numquam!
+      </p>
+    </div>
+  </body>
 </html>
