--- a/Podstawy HTML i CSS/cards/index.html
+++ b/Podstawy HTML i CSS/cards/index.html
@@ -16,10 +16,20 @@
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <link rel="stylesheet" href="style.css">
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap" rel="stylesheet">
+</head>
   <body>
     <div class="sections-container">
-      <section>
+      
+      <section class="sedan">
         <div class="heading">
         Sedans 
       </div>
@@ -29,28 +39,28 @@
       </p>
       <button>Learn more</button>
       </section>
-      <section>
-<div class="heading">
-      SUVs 
-    </div>
-      <p>
-      Take an SUV for its spacious interior, power, and versatility.
-      Perfect for your next family vacation and off-road adventures. 
-      </p>
-      <button>Learn more</button>
-    </section>
-  </div>
 
-    <section>
-      <div class="heading">
-      Luxury
-    </div>
-    <p>
-      Cruise in the best car brands without the bloated prices. Enjoy the
-      enhanced comfort of a luxury rental and arrive in style.
-    </p>
-    <button>Learn more</button>
-    </section>
+      <section class="suv">  
+          <div class="heading">
+            SUVs 
+          </div>
+          <p>
+          Take an SUV for its spacious interior, power, and versatility.
+          Perfect for your next family vacation and off-road adventures. 
+          </p>
+          <button>Learn more</button>
+      </section>
+
+      <section class="luxury">
+        <div class="heading">
+        Luxury
+        </div>
+        <p>
+        Cruise in the best car brands without the bloated prices. Enjoy the
+        enhanced comfort of a luxury rental and arrive in style.
+        </p>
+        <button>Learn more</button>
+      </section>
     </div>
 
     <!-- <div class="attribution">
