Co-authored-by: Mateusz Czekaj <mateusz-czekaj@users.noreply.github.com> Co-authored-by: KamilaMiszczyszyn <KamilaMiszczyszyn@users.noreply.github.com>

--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -8,12 +8,27 @@
     <title>Warmup</title>
 </head>
 <body>
-    <button>Submit</button>
+    <div>
+        <img src="cards/icon-sedans.svg">
+        <h1>Sedans</h1>
+        <p></p>
+        <button>Learn More</button></div>
     <br />
     <br />
-    <button>Confirm</button>
+    <div>
+        <h1>Suvs</h1>
+        <p></p>
+        <button>Learn More</button>
+    </div>
+    
     <br />
     <br />
-    <button>Cancel</button>
+    <div>
+        <h1>Luxury</h1>
+        <p></p>
+
+        <button>Learn More</button>
+        <p>asdasd asd asd asd d d </p> 
+    </div>
 </body>
 </html>
