--- a/Podstawy HTML i CSS/cards/index.html
+++ b/Podstawy HTML i CSS/cards/index.html
@@ -8,44 +8,40 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
-  
   <title>Frontend Mentor | 3-column preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
-<div>
-  <div class="Cards">
-  <div class="Sedans">
-    <img src="../cards/images/icon-sedans.svg"/>
-    <h1>Sedans</h1>
-    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-      or on your next road trip.</p>
-    <button>Learn more</button>
+<body>
+  <div>
+    <div class="Cards">
+      <div class="Sedans">
+        <img src="../cards/images/icon-sedans.svg"/>
+        <h1>Sedans</h1>
+        <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+          or on your next road trip.</p>
+        <button>Learn more</button>
+      </div>
+      <div class="Suvs">
+        <img src="../cards/images/icon-suvs.svg"/>
+        <h1>SUVs</h1>
+        <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+         and off-road adventures.</p>
+        <button>Learn more</button>
+      </div>
+      <div class ="Luxury">
+        <img src="../cards/images/icon-luxury.svg"/>
+        <h1>Luxury</h1>
+        <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+          rental and arrive in style.</p>
+        <button>Learn more</button>
+      </div>
     </div>
-  </div>
-  <p class="Suvs">
-    <h1>SUVs</h1>
-    <img src="images/icon-suvs.svg"/>
-  <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.</p>
-  <button>Learn more</button>
-  </div>
-  <div class ="Luxury">
-    <img src="../cards/images/icon-luxury.svg"/>
-    <h1>Luxury</h1>
-    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-      rental and arrive in style.</p>
-    <button>Learn more</button>
-  </div>
-</div>
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Zuza Melaniuk</a>.
+    </div>
 </body>
 </html>
