media queries added- finished project

--- a/Podstawy HTML i CSS/cards/index.html
+++ b/Podstawy HTML i CSS/cards/index.html
@@ -30,6 +30,7 @@
     <div class="sections-container">
       
       <section class="sedan">
+        <img src="images/icon-sedans.svg" alt="">
         <div class="heading">
         Sedans 
       </div>
@@ -40,7 +41,8 @@
       <button>Learn more</button>
       </section>
 
-      <section class="suv">  
+      <section class="suv"> 
+        <img src="images/icon-suvs.svg" alt=""> 
           <div class="heading">
             SUVs 
           </div>
@@ -52,6 +54,7 @@
       </section>
 
       <section class="luxury">
+        <img src="images/icon-luxury.svg" alt="">
         <div class="heading">
         Luxury
         </div>
