--- a/Podstawy HTML i CSS/preview/index.html
+++ b/Podstawy HTML i CSS/preview/index.html
@@ -9,25 +9,36 @@
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="wrapper">
+    <div class="container">
+      <h1 class="lead">Get insights that help your business grow.</h1>
+  
+      <p class="text">
+        Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+        experience, and overall efficiency.
+      </p>
+      <div class="stats">
+        <div class="statistic">
+          <span class="big-text">10k+</span> 
+          companies
+        </div>
+        <div class="statistic">
+          <span class="big-text">314</span> 
+          templates
+        </div>
+        <div class="statistic">
+          <span class="big-text">12m+</span> 
+          queries
+        </div>
+      </div>
+    </div>
+    <img src="images/image-header-desktop.jpg" alt="people working at an office, talking and laughing to each other">
   </div>
+  
+
 </body>
 </html>
