--- a/Podstawy HTML i CSS/cards/index.html
+++ b/Podstawy HTML i CSS/cards/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../cards/style.css" />
   <title>Frontend Mentor | 3-column preview card component</title>
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -16,22 +17,22 @@
 </head>
 <body>
   <div>
-    <div class="Cards">
-      <div class="Sedans">
+    <div class="cards">
+      <div class="sedans">
         <img src="../cards/images/icon-sedans.svg"/>
         <h1>Sedans</h1>
         <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
           or on your next road trip.</p>
         <button>Learn more</button>
       </div>
-      <div class="Suvs">
+      <div class="suvs">
         <img src="../cards/images/icon-suvs.svg"/>
         <h1>SUVs</h1>
         <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
          and off-road adventures.</p>
         <button>Learn more</button>
       </div>
-      <div class ="Luxury">
+      <div class ="luxury">
         <img src="../cards/images/icon-luxury.svg"/>
         <h1>Luxury</h1>
         <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
