--- a/Podstawy HTML i CSS/cards/index.html
+++ b/Podstawy HTML i CSS/cards/index.html
@@ -23,7 +23,7 @@
 					Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
 					city or on your next road trip.
 				</p>
-				<button>Learn More</button>
+				<button class="sedans-btn" type="button">Learn More</button>
 			</div>
 
 			<div class="card suvs">
@@ -33,7 +33,7 @@
 					Take an SUV for its spacious interior, power, and versatility. Perfect for your next
 					family vacation and off-road adventures.
 				</p>
-				<button>Learn More</button>
+				<button class="suvs-btn" type="button">Learn More</button>
 			</div>
 
 			<div class="card luxury">
@@ -43,7 +43,7 @@
 					Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a
 					luxury rental and arrive in style.
 				</p>
-				<button>Learn More</button>
+				<button class="luxury-btn" type="button">Learn More</button>
 			</div>
 		</div>
 
