--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -8,12 +8,15 @@
     <title>Warmup</title>
 </head>
 <body>
-    <button>Submit</button>
+    <button><em>Submit</em></button>
+    <span>Submit some text</span>
     <br />
     <br />
-    <button>Confirm</button>
+    <button><em>Confirm</em></button>
+    <span>Confirm whether it's right or wrong</span>
     <br />
     <br />
-    <button>Cancel</button>
+    <button><em>Cancel</em></button>
+    <span>Cancel if it doesn't make sense</span>
 </body>
 </html>
