--- a/Podstawy HTML i CSS/warmup/index.html
+++ b/Podstawy HTML i CSS/warmup/index.html
@@ -8,12 +8,17 @@
     <title>Warmup</title>
 </head>
 <body>
-    <button>Submit</button>
-    <br />
-    <br />
-    <button>Confirm</button>
-    <br />
-    <br />
-    <button>Cancel</button>
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, quae.</p>
+        <button id="submit">Submit</button>
+    </div>
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt soluta odit vero molestias ullam exercitationem!</p>
+        <button id="confirm">Confirm</button>
+    </div>
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, saepe!</p>
+        <button id="cancel">Cancel</button>
+    </div>
 </body>
 </html>
