--- a/Podstawy HTML i CSS/preview/index.html
+++ b/Podstawy HTML i CSS/preview/index.html
@@ -12,43 +12,40 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="styles.css">
+
     <title>Frontend Mentor | Stats preview card component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
     <main>
       <section class="text-section">
-        <h1>Get insights that help your business grow.</h1>
+        <h1>Get <span class="accent">insights</span> that help your business grow.</h1>
 
         <p>
           Discover the benefits of data analytics and make better decisions
           regarding revenue, customer experience, and overall efficiency.
         </p>
-        <div class="numbers">
-          <div>10k+ companies</div>
-          <div> 314 templates</div>
-          <div> 12m+ queries</div>
+        <div class="numbers-section">
+          <div class="number-and-stat"><span class="number">10k+</span> <span class="stat">COMPANIES</span></div>
+          <div class="number-and-stat"> <span class="number"> 314</span> <span class="stat">TEMPLATES</span></div>
+          <div class="number-and-stat"> <span class="number">12m+</span> <span class="stat">QUERIES</span></div>
       </section>
-      <section clas="image-section">
-        <img src="/images/image-header-desktop.jpg" alt="Three women at the desk">
+      <section class="image-section">
+        <div class="tint"></div>
       </section>
+    
     </main>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="#">Jakub Meyza</a>.
     </div>
   </body>
 </html>
