--- a/Layout w HTML i CSS/warmup/position/index.html
+++ b/Layout w HTML i CSS/warmup/position/index.html
@@ -8,6 +8,12 @@
     <title>Position</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="square square-1"></div>
+        <div class="square square-2"></div>
+        <div class="square square-3"></div>
+        <div class="square square-4"></div>
+    </div>
+
 </body>
 </html>
