Center elements using the position method

--- a/Layout w HTML i CSS/warmup/position/index.html
+++ b/Layout w HTML i CSS/warmup/position/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Position</title>
 </head>
+
 <body>
-    
+    <div class="box-container">
+        <div class="box box-1"></div>
+        <div class="box box-2"></div>
+        <div class="box box-3"></div>
+        <div class="box box-4"></div>
+    </div>
 </body>
+
 </html>
