--- a/Layout w HTML i CSS/warmup/position/index.html
+++ b/Layout w HTML i CSS/warmup/position/index.html
@@ -8,6 +8,13 @@
     <title>Position</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="inner-container">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+    </div>
 </body>
 </html>
