index.html modified

--- a/Layout w HTML i CSS/product_page/index.html
+++ b/Layout w HTML i CSS/product_page/index.html
@@ -15,6 +15,25 @@
   </style>
 </head>
 <body>
+  <header>
+    <nav class="menu-top">
+      <h2>sneakers</h2>
+      <ul>
+        <li><a href="">Collections</a></li>
+        <li><a href="">Men</a></li>
+        <li><a href="">Women</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>  
+      <button>
+        <img src="icon-cart.svg"/>
+      </button>
+      <button>
+        <img src="image-avatar.png"/>
+      </button>  
+        
+    </nav>
+  </header> 
 
   Collections
   Men
@@ -22,19 +41,43 @@
   About
   Contact
 
-  Sneaker Company
+ <div class="item-image">
+    <div class="main-image">
+      <img src="#" />
+    </div>
+      <div class="small-image"></div>
+      <div class="small-image"></div>
+      <div class="small-image"></div>
+      <div class="small-image"></div>
+ </div>
 
-  Fall Limited Edition Sneakers
+  <div class="item-description">
+    <article>
+      <h4>Sneaker Company</h4>
+      <br></br>
+      <h1>Fall Limited Edition Sneakers</h1>
+      <br></br>
+      <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
+        durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+    </article>      
+  </div>
+  
+  <div class="price-section">
+    <!-- glowna cena -->
+    <h3>$125.00<h3>
+    <!-- box z pomniejszona czcionka, promocja   -->
+    <p>50%</p>
+    <!-- przekreslona czcionka, poprzednia cena -->
+    <p>$250.00</p>
+  </div>
 
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
+  <div class="amount">
+    <button>-</button>
+    <p>0</p>
+    <button>+</button>
+  <div class="add-to-cart">
+    <button>Add to cart</button>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
