Modified index.html and styles.css

--- a/Layout w HTML i CSS/product_page/index.html
+++ b/Layout w HTML i CSS/product_page/index.html
@@ -13,28 +13,55 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <header>
 
-  Collections
-  Men
-  Women
-  About
-  Contact
+  <ul>
+    <li><img src="./images/logo.svg"></li>
+    <li>Collections</li>
+    <li>Men</li>
+    <li>Women</li>
+    <li>About</li>
+    <li>Contact</li>
+    <li class="nav-right"><img src="./images/icon-cart.svg"></li>
+    <li class="nav-right"><img src="./images/image-avatar.png"></li>
+  </ul>
+ </header>
 
-  Sneaker Company
+ <div class="container">
+  <div class="photos">
+    <div class="photo main-photo"></div>
+    <div class="inner-container">
+      <div class="photo"></div>
+      <div class="photo"></div>
+      <div class="photo"></div>
+      <div class="photo"></div>
+    </div>
+  </div>
+  <p class="description">
+    <h2>Sneaker Company</h2>
 
-  Fall Limited Edition Sneakers
+    <h1>Fall Limited Edition Sneakers</h1>
+  
+    <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
+    durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+  
+    <span>$125.00</span>
+    <span>50%</span>
+    <span>$250.00</span>
+  
+    <div class="buttons">
+      <img src="images/icon-minus.svg">
+      <span>0</span>
+      <img src="images/icon-plus.svg">
+      <button>Add to cart</button>
+    </div>
+  </div>
+ </div>
+ 
 
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
