styles.css added

--- a/Layout w HTML i CSS/product_page/index.html
+++ b/Layout w HTML i CSS/product_page/index.html
@@ -1,44 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | E-commerce product page</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
 
-  Collections
-  Men
-  Women
-  About
-  Contact
+    <title>Frontend Mentor | E-commerce product page</title>
 
-  Sneaker Company
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  </head>
+  <body>
+    <header>
+      <div>
+        <img src="./images/logo.svg" />
+        <ul>
+          <li><a>Collections</a></li>
+          <li><a>Men</a></li>
+          <li><a>Women</a></li>
+          <li><a>About</a></li>
+          <li><a>Contact</a></li>
+        </ul>
+      </div>
+      <div>
+        <img src="./images/icon-cart.svg" />
+        <img src="./images/image-avatar.png" />
+      </div>
+    </header>
+    <main>
+      <div class="gallery">
+        <div class="product_image">
+          <img src="./images/image-product-1.jpg" />
+        </div>
+        <div class="thumbnails">
+          <img src="./images/image-product-1-thumbnail.jpg" />
+          <img src="./images/image-product-2-thumbnail.jpg" />
+          <img src="./images/image-product-3-thumbnail.jpg" />
+          <img src="./images/image-product-4-thumbnail.jpg" />
+        </div>
+      </div>
+      <div class="product_description">
+        <div class="company_name">
+          <span>Sneaker Company</span>
+        </div>
+        <div class="product_details">
+          <h1>Fall Limited Edition Sneakers</h1>
+          <p>
+            These low-profile sneakers are your perfect casual wear companion.
+            Featuring a durable rubber outer sole, they’ll withstand everything
+            the weather can offer.
+          </p>
+          <span>$125.00</span>
+          <span>50% </span>
+          <span>$250.00 </span>
+          <span>0</span>
+        </div>
+        <div class="product_buy">
+          <button><img src="./images/icon-minus.svg" /></button>
+          <span>0</span>
+          <button><img src="./images/icon-plus.svg" /></button>
+          <button>Add to cart</button>
+        </div>
+      </div>
+    </main>
 
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
