--- a/Layout w HTML i CSS/product_page/index.html
+++ b/Layout w HTML i CSS/product_page/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Frontend Mentor | E-commerce product page</title>
+	</head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | E-commerce product page</title>
+	<body>
+		<header>
+			<div class="header__logo"><img src="./images/logo.svg" alt="Company logo"/></div>
+			<nav class="header__nav">
+				<ul>
+					<li><a href="">Collections</a></li>
+					<li><a href="">Men</a></li>
+					<li><a href="">Women</a></li>
+					<li><a href="">About</a></li>
+					<li><a href="">Contact</a></li>
+				</ul>
+			</nav>
+			<button class="header__cart"><img src="./images/icon-cart.svg" alt="Cart icon" /></button>
+			<div class="header__avatar"><img src="./images/image-avatar.png" alt="Profile avatar" /></div>
+		</header>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Collections
-  Men
-  Women
-  About
-  Contact
-
-  Sneaker Company
-
-  Fall Limited Edition Sneakers
-
-  These low-profile sneakers are your perfect casual wear companion. Featuring a 
-  durable rubber outer sole, they’ll withstand everything the weather can offer.
-
-  $125.00
-  50%
-  $250.00
-
-  0
-  Add to cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		<main>
+			<section class="image-container"></section>
+			<section class="offer-container">
+				<h2 class="manufacter-name">Sneaker Company</h2>
+				<h3 class="product-name">Fall Limited Edition Sneakers</h3>
+				<p>
+					These low-profile sneakers are your perfect casual wear companion. Featuring a durable
+					rubber outer sole, they’ll withstand everything the weather can offer.
+				</p>
+			</section>
+			$125.00 50% $250.00 0 Add to cart
+		</main>
+	</body>
 </html>
