--- a/Layout w HTML i CSS/product_page/index.html
+++ b/Layout w HTML i CSS/product_page/index.html
@@ -14,6 +14,13 @@
 
     <link rel="stylesheet" href="style.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | E-commerce product page</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -30,7 +37,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <div class="logo">Sneakers</div>
+        <div class="logo"><img src="/images/logo.svg" /></div>
         <nav>
           <ul>
             <li>Collection</li>
@@ -40,9 +47,9 @@
             <li>Contact</li>
           </ul>
         </nav>
-        <div class="basket-avatar">
-          <div class="basket">basket</div>
-          <div class="avatar">avatar</div>
+        <div class="cart-avatar">
+          <div class="cart"></div>
+          <div class="avatar"></div>
         </div>
       </header>
       <main>
