Style gallery component

--- a/Layout w HTML i CSS/product_page/index.html
+++ b/Layout w HTML i CSS/product_page/index.html
@@ -54,7 +54,11 @@
       </header>
       <main>
         <section class="gallery">
-          <!-- wstawiamy zdjęcia obazków -->
+          <img class="thumbnail" src="/images/image-product-1.jpg" />
+          <img class="thumbnail" src="/images/image-product-1-thumbnail.jpg" />
+          <img class="thumbnail" src="/images/image-product-2-thumbnail.jpg" />
+          <img class="thumbnail" src="/images/image-product-3-thumbnail.jpg" />
+          <img class="thumbnail" src="/images/image-product-4-thumbnail.jpg" />
         </section>
         <section class="description">
           <!-- wstawiamy opis poniżej -->
@@ -65,7 +69,7 @@
             withstand everything the weather can offer.
           </p>
           <!-- cena/przecena -->
-          <p class="new-prie">$125.00</p>
+          <p class="new-price">$125.00</p>
           <p class="discount">50%</p>
           <p class="old-price">$250.00</p>
           <!-- przycisk dodaj do koszyka i wybirz ilość -->
