Correct index.html

--- a/Layout w HTML i CSS/product_page/index.html
+++ b/Layout w HTML i CSS/product_page/index.html
@@ -106,7 +106,7 @@
 						<span class="discount">50%</span>
 					</div>
 					<del>$250.00</del>
-
+          <div class="btn">
 					<button class="amount">
 						<svg
 							width="12"
@@ -126,8 +126,9 @@
 								xlink:href="#a"
 							/>
 						</svg>
-						<input type="number" readonly />
-						<svg
+						<input type="number" placeholder="0" step="1" min="0" max="99" readonly/>
+
+						<svg 
 							width="12"
 							height="12"
 							xmlns="http://www.w3.org/2000/svg"
@@ -146,8 +147,8 @@
 							/>
 						</svg>
 					</button>
-					<button type="submit" class="btn">
-						<svg
+					<button type="submit" class="submit">
+						<svg class="basket"
 							width="22"
 							height="20"
 							xmlns="http://www.w3.org/2000/svg"
