update HTML layout

--- a/Podstawy HTML i CSS/preview/index.html
+++ b/Podstawy HTML i CSS/preview/index.html
@@ -16,24 +16,21 @@
 	</head>
 	<body>
 		<div class="card">
-			<div class="hero"></div>
-			<h1>Get <span>insights</span> that help your business grow.</h1>
-			<p>
-				Discover the benefits of data analytics and make better decisions regarding revenue,
-				customer experience, and overall efficiency.
-			</p>
-			<p class="card-number">10k+</p>
-			<p class="card-subtext">companies</p>
-			<p class="card-number">314</p>
-			<p class="card-subtext">templates</p>
-			<p class="card-number">12m+</p>
-			<p class="card-subtext">queries</p>
-		</div>
+			<div class="card__text">
+				<h1>Get <span>insights</span> that help your business grow.</h1>
+				<p>
+					Discover the benefits of data analytics and make better decisions regarding revenue,
+					customer experience, and overall efficiency.
+				</p>
+				<p class="card__counter">10k+</p>
+				<p class="card__label">companies</p>
+				<p class="card__counter">314</p>
+				<p class="card__label">templates</p>
+				<p class="card__counter">12m+</p>
+				<p class="card__label">queries</p>
+			</div>
 
-		<div class="attribution">
-			Challenge by
-			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-			Coded by <a href="#">Your Name Here</a>.
+			<div class="card__hero"></div>
 		</div>
 	</body>
 </html>
